# cs2650

./: .gitignore  Makefile  README.md
data/experiment_1000_compaction/: L0-1741063268321853-2.sst  L0-1741063269790998-4.sst  L0-1741063278571977-7.sst  L0-1741063283925093-9.sst  L0-1741063284575921-10.sst
data/experiment_valuesize_1024/: L0-1741063302725861-14.sst
data/experiment_valuesize_256/: L0-1741063300013579-13.sst
data/experiment_valuesize_4096/: L0-1741063303136104-15.sst
docs/: lsm-tree-project-plan.md  lsm-tree-research-notes.md  project-plan.md
include/: bloom_filter.h  client.h  constants.h  fence_pointers.h  lsm_adapter.h  lsm_tree.h  memtable.h  run.h  server.h  skip_list.h  skiplist.h  thread_pool.h
plots/buffer_size/: buffer_size_mixed_metrics.csv
plots/client_count/: client_count_mixed_metrics.csv
plots/data_distribution/: data_distribution_mixed_metrics.csv
plots/data_size/: data_size_mixed_metrics.csv
plots/query_distribution/: query_distribution_mixed_metrics.csv
plots/read_write_ratio/: read_write_ratio_mixed_metrics.csv
project/: .gitignore  BUILD.md  CMakeLists.txt  README.md  build.sh  comparison_results.csv  install_python.sh  run_cli.sh  run_test.py  run_tuning.sh  setup.py
project/data/: L0-1742955072671996-0.sst  L0-1742955072970475-1.sst  L0-1742955073286146-2.sst  L0-1742955073592697-3.sst  L0-1742955073902531-4.sst  compaction_results.csv  results_1000.csv  valuesize_results.csv
project/data/compaction/tuning_1744056424/: sstable_1744056424366.sst  sstable_1744056424369.sst  sstable_1744056424376.sst  sstable_1744056424382.sst  sstable_1744056424389.sst  sstable_1744056424398.sst  sstable_1744056424407.sst  sstable_1744056424412.sst  sstable_1744056424420.sst  sstable_1744056424429.sst  sstable_1744056424435.sst  sstable_1744056424443.sst  sstable_1744056424451.sst  sstable_1744056424456.sst  sstable_1744056424463.sst  sstable_1744056424471.sst  sstable_1744056424477.sst  sstable_1744056424485.sst  sstable_1744056424493.sst  sstable_1744056424498.sst  sstable_1744056424506.sst  sstable_1744056424514.sst  sstable_1744056424519.sst  sstable_1744056424527.sst  sstable_1744056424535.sst  sstable_1744056424541.sst  sstable_1744056424548.sst  sstable_1744056424557.sst  sstable_1744056424562.sst  sstable_1744056424570.sst  sstable_1744056424578.sst  sstable_1744056424583.sst  sstable_1744056424591.sst  sstable_1744056424599.sst  sstable_1744056424605.sst  sstable_1744056424612.sst  sstable_1744056424620.sst  sstable_1744056424626.sst  sstable_1744056424634.sst  sstable_1744056424642.sst  (+113 more)
project/data/experiment_1000/: L0-1741063254108386-0.sst
project/data/experiment_1000_compaction/: L0-1741063258722327-1.sst  L0-1741063269185407-3.sst  L0-1741063277806548-5.sst  L0-1741063277924979-6.sst  L0-1741063281946103-8.sst
project/data/experiment_valuesize_64/: L0-1741063287009305-12.sst
project/data/experiment_valuesize_8/: L0-1741063285961834-11.sst
project/data/naive/: sstable_1743998357276.sst
project/docs/: basic-design-doc.md  midway-design-doc.tex  project-plan  project-plan.md  work_log.md
project/docs/design-docs/: midway-design-doc.tex
project/include/: common.h  lsm_tree.h  sstable.h
project/include/compaction/: lsm_tree.h
project/include/naive/: lsm_tree.h  manifest.h  memtable.h  sstable.h
project/include/server/: dsl_parser.h  server.h
project/python/lsm_tree/: __init__.py
project/python/lsm_tree/naive/: __init__.py
project/scripts/: setup.sh
project/src/: cli.cpp  server.cpp
project/src/bindings/: bindings.cpp
project/src/client/: client.cpp
project/src/compaction/: lsm_tree.cpp
project/src/naive/: lsm_tree.cpp  manifest.cpp  memtable.cpp  sstable.cpp
project/src/server/: dsl_parser.cpp  main.cpp  server.cpp
project/test/: comparison_experiment.cpp  experiment.cpp  experiment_get.py  experiment_put.py  get_results.csv  plot_comparison.py  plot_experiments.py  put_data_100000.txt  put_data_200000.txt  put_results.csv  test_compaction.cpp  workload_experiment.cpp
project/tests/cpp/: compaction_tuning_test.cpp  main_test.cpp
project/tests/functional/: test_memtable.cpp
project/tests/python/: metrics_collector.py  test_runner.py  visualize_tuning.py  workload_generator.py
project/tests/python/configs/: test_config.json
results/: benchmark_mixed_20250517_052917.txt  benchmark_mixed_20250517_053006.txt  benchmark_mixed_20250517_053112.txt  benchmark_mixed_20250517_053255.txt  benchmark_mixed_20250517_053339.txt  benchmark_mixed_20250517_053359.txt  benchmark_mixed_20250517_053446.txt  benchmark_mixed_20250517_053506.txt  benchmark_mixed_20250517_053551.txt  benchmark_mixed_20250517_053611.txt  benchmark_mixed_20250517_053656.txt  benchmark_mixed_20250517_053716.txt  benchmark_mixed_20250517_053803.txt  benchmark_mixed_20250517_053823.txt  benchmark_mixed_20250517_053909.txt  benchmark_mixed_20250517_053929.txt  benchmark_mixed_20250517_054014.txt  benchmark_mixed_20250517_054034.txt  benchmark_mixed_20250517_054119.txt  benchmark_mixed_20250517_054139.txt  benchmark_mixed_20250517_054224.txt  benchmark_mixed_20250517_054247.txt  benchmark_mixed_20250517_054331.txt  benchmark_mixed_20250517_054351.txt  benchmark_mixed_20250517_054436.txt  benchmark_mixed_20250517_054456.txt  benchmark_mixed_20250517_054543.txt  benchmark_mixed_20250517_054603.txt  benchmark_mixed_20250517_054648.txt  benchmark_mixed_20250517_054708.txt  benchmark_mixed_20250517_054755.txt  benchmark_mixed_20250517_054815.txt  benchmark_mixed_2clients_20250517_054900.txt  benchmark_mixed_4clients_20250517_054920.txt  benchmark_mixed_8clients_20250517_055005.txt  consolidated_report_mixed.txt
scripts/: generate_test_data_files.py  master_test.py  test_loading_performance.py
src/: almost_full_buffer_generator.cpp  bloom_filter.cpp  client.cpp  data_generator.cpp  data_generator_256mb.cpp  fence_pointers.cpp  generate_test_data.cpp  lsm_adapter.cpp  lsm_tree.cpp  main_client.cpp  main_server.cpp  run.cpp  server.cpp  skip_list.cpp  thread_pool.cpp
test/: test_main.cpp
(+2 files in other folders)
